--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,6 @@
 
     <properties>
         <scala.version>2.11.0-M8</scala.version>
-        <!--<akka.version>2.2.0</akka.version>-->
-        <!--AOP-->
-        <!--<aj.version>1.6.8</aj.version>-->
     </properties>
 
     <pluginRepositories>
@@ -80,6 +77,11 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.scalatest</groupId>-->
+            <!--<artifactId>scalatest_2.10</artifactId>-->
+            <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
     </dependencies>
     <build>
     <plugins>
@@ -141,16 +143,6 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                    <configuration>
-                        <artifactSet>
-                        <!-- <excludes>
-<exclude>org.scala-lang:scala-library:*</exclude>
-<exclude>xerces:*</exclude>
-<exclude>com.google.guava:*</exclude>
-</excludes> -->
-                        </artifactSet>
-
-                    </configuration>
                 </execution>
             </executions>
         </plugin>
